<resources>
    <string name="app_name">Notes CRUD App</string>
    <string name="action_settings">To notes list</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="add_new_note">Add new note</string>
    <string name="add_note_btn">add_note_btn</string>
    <string name="popupTitle">Add new note!</string>
    <string name="note_title">Note title...</string>
    <string name="save">Save</string>
    <string name="type_your_note">Type your note...</string>
    <string name="editbtnn">editBtnn</string>
    <string name="deltebtnn">delteBtnn</string>
    <string name="notelistbtn">noteListBtn</string>
    <string name="alert_text">Are you sure?</string>
    <string name="noBtnAlert">No</string>
    <string name="yesBtnAlert">Yes</string>
    <string name="edit_popup">Edit Note.</string>
    <string name="edit_btn_update">Update</string>
    <string name="empty_folder">Notes list is empty! Press + button to create new one, or go back to main screen.</string>
</resources>