<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:padding="20dp"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/title_alert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:padding="5dp"
                android:text="@string/alert_text"
                android:textColor="#000000" />

            <Button
                android:id="@+id/alert_no_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title_alert"
                android:layout_alignParentStart="true"
                android:layout_marginStart="40dp"
                android:layout_marginTop="26dp"
                android:backgroundTint="#FF0000"
                android:text="@string/noBtnAlert" />

            <Button
                android:id="@+id/alert_yes_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title_alert"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="26dp"
                android:layout_marginEnd="26dp"
                android:backgroundTint="#4EFF00"
                android:text="@string/yesBtnAlert" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>