<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_id"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="332dp"
            android:padding="24dp">

            <TextView
                android:id="@+id/popup_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/popupTitle"
                android:textSize="18sp"
                android:textStyle="italic" />

            <EditText
                android:id="@+id/note_title_el"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/popup_title"
                android:layout_marginTop="36dp"
                android:autofillHints=""
                android:hint="@string/note_title"
                android:inputType="text" />

            <EditText
                android:id="@+id/note_text_el"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/save_btn"
                android:layout_below="@+id/note_title_el"
                android:layout_marginTop="29dp"
                android:layout_marginBottom="53dp"
                android:autofillHints=""
                android:hint="@string/note_title"
                android:inputType="text" />

            <Button
                android:id="@+id/save_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/note_title_el"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="-175dp"
                android:background="@color/purple_200"
                android:text="@string/save"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                android:textStyle="bold" />



        </RelativeLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>