<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="15dp"
    android:orientation="horizontal">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewNote"
        android:layout_width="497dp"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="507dp"
            android:layout_height="240dp"
            android:layout_marginBottom="5dp"
            android:padding="15dp">

            <TextView
                android:id="@+id/note_title_el"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/app_name"
                android:textColor="#000000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/note_text_el"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_above="@+id/note_date_el"
                android:layout_below="@+id/note_title_el"
                android:layout_alignParentStart="true"
                android:layout_marginStart="-1dp"
                android:layout_marginTop="17dp"
                android:layout_marginBottom="76dp"
                android:paddingTop="5dp"
                android:text="@string/app_name"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/note_date_el"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="6dp"
                android:layout_marginBottom="26dp"
                android:paddingTop="5dp"
                android:text="@string/app_name"
                android:textSize="15sp" />

            <ImageButton
                android:id="@+id/deleteBtn"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="151dp"
                android:layout_marginBottom="9dp"
                android:background="@android:drawable/ic_menu_delete"
                android:backgroundTint="#FF0000"
                android:contentDescription="@string/deltebtnn" />

            <ImageButton
                android:id="@+id/editBtn"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="206dp"
                android:layout_marginBottom="7dp"
                android:background="@android:drawable/ic_menu_edit"
                android:backgroundTint="#000000"
                android:contentDescription="@string/editbtnn" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>